# smart-iot-app

./: .dockerignore  .gitignore  DockerFile  Makefile  README.md  analysis_options.yaml  handler.js  package-lock.json  package.json  pubspec.yaml  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
android/: build.gradle  gradle.properties
android/app/: build.gradle
drafts/: Data_Structure.md  DraftVersion5.md  database.md  draft version 6.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/Theme/: ThemeManager.dart
lib/db/: local_history.dart  threshold_settings.dart
lib/features/: mainpage_widget_observer.dart
lib/model/: ChartDataModel.dart  DeviceType.dart  HistoryCache.dart  LocalHistory.dart  QueryWidget.dart  ReportModel.dart  SearchResult.dart
lib/models/: RequestModel.dart  ResponseModel.dart
lib/modules/: native_call.dart  pipe.dart
lib/pages/: AnalysisPage.dart  AnalysisSub.dart  CommandPage.dart  ContactPage.dart  DeviceDetail.dart  DeviceEditor.dart  HistoryPage.dart  HomePage.dart  Login.dart  MainPage.dart  MangePage.dart  ProfilePage.dart  RegisterPage.dart  ResetPassWordPage.dart  SettingPage.dart  TestPage.dart  app.dart  onboard.dart  root.dart  settings.dart
lib/services/: AuthExceptionHandler.dart  MQTTClientHandler.dart  PostRequest.dart  authentication.dart  dataManagement.dart  database_op.dart  image_op.dart  lambdaCaller.dart  notification.dart
lib/src/native/: native.dart  (+3 more)
native/: Cargo.toml  build.rs  pyproject.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
serverless/AskAccessKey/: handler.js
serverless/TableFunctions/: handler.js
test/: widget_test.dart
(+32 files in other folders)
