[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib","staticlib","cdylib",]

[dependencies]
flutter_rust_bridge = "1"
serde = "1.0.159"
serde_json = "1.0.95"
ta = "0.5.0"

[build-dependencies]
flutter_rust_bridge_codegen = "1"
