[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib","staticlib","cdylib",]

[dependencies]
dfdx = { version = "0.11.1", features = ["numpy"]}
flutter_rust_bridge = "1"
numpy = "0.18.0"
safetensors = "0.3.0"
serde = "1.0.159"
serde_json = "1.0.95"
ta = "0.5.0"
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3", "abi3-py310"] }
pyo3-build-config = { version = "0.18.3", features = ["resolve-config"]}

[dependencies.pyo3-ffi]
version = "0.18.3"
features = ["extension-module", "abi3", "abi3-py310", "generate-import-lib"]

[build-dependencies]
flutter_rust_bridge_codegen = "1"

[env]
PYO3_PRINT_CONFIG = 1
PYO3_CROSS_PYTHON_VERSION = 3.10